<resources>
    <string name="app_name">Штурман</string>
    <string name="text_link_ehs"> <a href="https://tutorial.eyehunts.com//">https://tutorial.eyehunts.com//</a></string>
    <string name="rule_link1"><a href="http:////www.consultant.ru//document//cons_doc_LAW_280037//"><u>Ст. 26.8, ч. 1 ст. 25.1. КоАП РФ, ст. 151 Приказа МВД России от 23.08.2017 № 664 «Об утверждении Административного регламента по надзору за соблюдением требований безопасности дорожного движения»</u></a></string>
    <string name="text_web"> <a href="http:////www.consultant.ru//">http:////www.consultant.ru//</a></string>
    <string name="contacts_name">Экстренные номера</string>
    <string name="contacts_phone">В любой экстренной ситуации звоните по номеру 112.</string>
    <string name="contacts_email">Полиция: 102; Скорая помощь: 103</string>
    <string name="contacts_website">http://ГИБДД.рф/</string>
    <string name="answer_question1">Могу ли я узнать показания скорости на радаре у инспектора?</string>
    <string name="answer_notion1">И более того, инспектор должен показать Вам зафиксированные показания мобильного радара. При этом Вы имеете право просмотреть сертификат на радар, в котором содержится информация о проверке и погрешности прибора. Это может помочь Вам оспорить нарушение как по погрешности, так и по отсутствию пометки о проверке.</string>
    <string name="answer_qiuck1">Да</string>
    <string name="test_answer_bicycle">Ваш результат:
<br />🛴 => 🚴
<br />(самокат как велосипед)</string>
    <string name="test_answer_moped">Ваш результат:
<br />🛴 => 🛵
<br />(самокат как мопед)</string>
    <string name="test_answer_motorcycle">Ваш результат:
<br />🛴 => 🏍
<br />(самокат как мотоцикл)</string>
    <string name="test_answer_pedestrian">Ваш результат:
<br />🚶
<br />(Вы пешеход)</string>
    <string name="test_info1">Посмотрите документы на самокат, найдите там мощность и максимальную скорость самоката</string>
    <string name="test_button_done">Посмотрел</string>
    <string name="test_question_button_driver">Еду</string>
    <string name="test_question_not_driver">Везу рядом</string>
    <string name="test_question1">Вы едете на самокате?</string>
    <string name="test_question2">У самоката есть двигатель?</string>
    <string name="test_question_no">Нет</string>
    <string name="test_question_yes">Да</string>
    <string name="test_question3">Каковы мощность и максимальная скорость самоката?</string>
    <string name="test_question_item_first">Не больше 250 Вт, не больше 25 км/ч</string>
    <string name="test_question_item_second">Больше 250Вт и меньше 4 кВт, меньше 50 км/ч</string>
    <string name="test_question_item_third">Больше 4 кВт, больше 50 км/ч</string>
    <string name="test_finish">Завершить</string>
    <string name="title_activity_dictionary">DictionaryActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="complaint_title">Правила подачи жалобы</string>
    <string name="complaint_instruction">В таком случае Вы подаёте жалобу.\nОднако если инспектор передал Ваше дело в суд или дело было изначально возбуждено судом, то подать жалобу не получится. Подавайте иск или готовьте отзыв на иск.\n\n1. Узнайте точное наименование органа или ФИО начальника ГИБДД, куда и кому подаёте;\n\n2. Соберите все необходимые документы: копию протокола и постановления, показания свидетелей, записи с видеокамер или фотографии на флешке (фотографии можно также распечатать);\n\m3. Проверьте, что в жалобе указаны:\n\tа) Суд или наименование должностного лица, кто будет рассматривать жалобу;\n\tб) Ваше ФИО, номер телефона;\n\tв) Сведения о потерпевших (если они есть);\n\tг) Кто вынес обжалуемое Вами постановление;\n\tд) Какое наказание Вам назначили;\n\tе) С чем Вы не согласны: Ваши аргументы;\n\tё) Законодательство и конкретные нормы, на которые Вы ссылаетесь;\n\tж) Приложения, при наличии;\n\tз) Дата и подпись.\n\nВы не платите госпошлину при обжаловании постановления. Не забудьте приложить копию обжалуемого постановления к жалобе, а также копию протокола.</string>
    <string name="complaint_button">Образец жалобы (PDF)</string>
    <string name="choice_frm_title">Как обжаловать?</string>
    <string name="choice_form_text">Для начала следует определиться, куда именно Вы хотите обжаловать чьи-то действия или чьё-то решение.\n\nВы имеете право обжаловать:\n\tа) В суд, в т.ч. по месту рассмотрения дела;\n\tб) Вышестоящему лицу того отдела, где работает инспектор ГИБДД;\n\tв) В вышестоящий ГИБДД (по региону);\n\tг) В иной орган (если постановление вынесено, например, МАДИ – то в уполномоченный орган МАДИ).\n\nЕсли Вы не знаете, куда подавать или боитесь, что подадите не туда – не переживайте и подавайте всё равно. В крайнем случае в течение 3 дней жалобу перенаправят на рассмотрение в тот орган или в суд, куда она должна была изначально поступить.\n* См. п. п. 3, 3.1 ч. 1 ст. 30.1 КоАП РФ, ч. 2 ст. 30.2 КоАП РФ.\n\n\tВАЖНО!\n\tСрок обжалования постановления – 10 суток со дня вручения или получения Вами копии постановления.\n</string>
    <string name="isk_title">Правила подачи иска</string>
    <string name="isk_instruction">В таком случае Вы подаёте иск (административное исковое заявление).\n\n1. Проверьте, что в Вашем иске отражены:\n\tа) Наименование суда;\n\tб) Ваше ФИО, адрес, телефон, электронная почта, дата и место рождения. По желанию можете указать сведения о высшем юридическом образовании (если собираетесь лично выступать);\n\tв) Сведения о представителе (то же, что в пункте б), но без даты и места рождения);\n\tг) Ответчик: наименование, адрес, телефон, адрес электронной почты;\n\tд) Какие Ваши права были нарушены;\n\tе) Ваши требования и основания Ваших требований;\n\tж) Сведения о том, что Вы ранее подавали жалобу (если подавали) и об исходе её рассмотрения;\n\tз) Документы, которые Вы прилагаете к иску.\n\n2. Помните, что Вы не платите госпошлину при обжаловании постановления. Не забудьте приложить копию обжалуемого постановления к жалобе, а также копию протокола.</string>
    <string name="isk_button">Образец иска (PDF)</string>
</resources>